--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
 <body>
 		<form id="my-form" method="post">
   <label for="name">Name</label>
-  <input type="text" id="name" required>
+  <input type="text" id="name" name="name" required>
   <br>
   <label for="email">Email</label>
-  <input type="email" id="email" required>
+  <input type="email" id="email" name="email" required>
   <br>
   <label for="gender_m">M</label>
   <input type="radio" id="gender_m" name="gender" required>
